polaris-react/src/components/IndexFilters/IndexFilters.scss
@import '../../styles/common';

$p-medium-page-up: 768px;
$spinner-size: 20px;

.IndexFiltersWrapper {
  width: 100%;
}

@media #{$p-breakpoints-sm-up} {
  .IndexFiltersWrapper {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    height: auto !important;
  }
}

@media #{$p-breakpoints-sm-down} {
  .IndexFilters.IndexFiltersSticky {
    position: fixed;
    z-index: var(--p-z-index-1);
    top: 56px;
    width: 100vw;
    box-shadow: var(--p-shadow-sm);
  }

  .IndexFilters.IndexFiltersStickyFlush {
    top: 0;
  }
}

.TabsWrapper {
  flex: 1;
  height: 44px;

  @media #{$p-breakpoints-md-down} {
    height: var(--p-space-12);
  }
}

.SmallScreenTabsWrapper {
  overflow: hidden;
  padding: var(--p-space-1) var(--p-space-0) var(--p-space-2) var(--p-space-3);
  padding: 0;

  &.TabsWrapperLoading {
    position: relative;
  }
}

.TabsLoading svg {
  display: block;
}

.TabsWrapperLoading .TabsLoading {
  position: absolute;
  right: 0;
  top: 0;
  height: 55px;
  width: 56px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--p-color-bg);

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: -16px;
    width: var(--p-space-4);
    height: 100%;
    pointer-events: none;
    // stylelint-disable -- generated by polaris-migrator DO NOT COPY
    background: linear-gradient(
      to right,
      rgba(255, 255, 255, 0),
      var(--p-color-bg)
    );
    // stylelint-enable
  }
}

.ActionWrap {
  display: flex;
  gap: var(--p-space-2);
  align-items: center;
  justify-content: flex-start;
  padding: var(--p-space-1_5-experimental) var(--p-space-2);

  @media #{$p-breakpoints-md-down} {
    position: relative;
    padding: var(--p-space-3) var(--p-space-4);
    height: 3rem;
    border-left: var(--p-border-width-1) solid var(--p-color-border-subdued);
    gap: var(--p-space-2);

    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: -17px;
      width: var(--p-space-4);
      height: 100%;
      pointer-events: none;
      // stylelint-disable -- generated by polaris-migrator DO NOT COPY
      background: linear-gradient(
        to right,
        rgba(255, 255, 255, 0),
        var(--p-color-bg)
      );
      // stylelint-enable
    }
  }
}

.ActionWrap svg {
  display: block;
}

.Spinner {
  width: $spinner-size;
  transform: translateX(var(--p-space-1));

  svg {
    display: block;
  }
}

